Migrates all tests and fixtures from JUnit 4.x to Jupiter (#1387)
Signed-off-by: Adrian Cole <adrian@tetrate.io>